Update tmunx.conf and add my own vimrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,9 @@
 # set Zsh as your default Tmux shell
 set-option -g default-shell /bin/zsh
 
-# Tmux should be pretty, we need 256 color for that
+# Add truecolor support
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+# Default terminal is 256 colors
 set -g default-terminal "screen-256color"
 
 
@@ -38,4 +40,3 @@ bind C-[ run '~/tmux-powerline/mute_powerline.sh left'        # Mute left status
 bind C-] run '~/tmux-powerline/mute_powerline.sh right'        # Mute right statusbar.
 
 bind e set-window-option synchronize-panes
-
